# mev-bot-backtest

./: .gitignore  ACCURACY_IMPROVEMENT_PLAN.md  API.md  Cargo.toml  GUIDE.md  PHASE_4_PLAN.md  PHASE_5_PLAN.md  api_err.txt  api_log.txt  body.json  direct_out.txt  mev-backtest.example.toml  mev-scout.example.toml  opencode.json  run_out.txt  server_err.txt  server_out.txt
.kilo/plans/: 1780116363367-mighty-meadow.md
.omo/run-continuation/: ses_150069ba3ffeyMXm5w4jxQUti3.json  ses_15f741a51ffedCv4y2MTAVP3ma.json
api/: Cargo.toml
api/src/: mapping.rs  pipeline.rs  state.rs
api/src/routes/: export.rs  history.rs  results.rs  simulate.rs  status.rs
cache/: db  snap.00000000000269CB
cache/blobs/: 157990  158006
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: cache.rs  cli.rs  coingecko.rs  config.rs  data.rs  fetch.rs  lib.rs  resolver.rs  rpc.rs  run.rs  types.rs  utils.rs  validation.rs
core/src/mev/: jit.rs  jit_arb.rs  mod.rs  multi_hop.rs  opportunity.rs  sandwich.rs  two_hop.rs
core/src/pool/: decoders.rs  dex_type.rs  discovery.rs  math.rs  mod.rs  registry.rs  state.rs  v3_quote.rs
core/tests/: e2e_discovery.rs  integration.rs
docs/superpowers/plans/: 2026-06-06-multi-hop-arb.md  2026-06-07-codebase-quality-improvements.md  2026-06-07-jit-arb-detection.md  2026-06-07-jit-detection.md  2026-06-07-pool-init-fix.md  2026-06-07-sandwich-detection.md  2026-06-10-simulation-accuracy-phase1.md
docs/superpowers/specs/: 2026-06-06-multi-hop-arb-design.md  2026-06-07-jit-arb-detection-design.md  2026-06-07-pool-init-fix-design.md  2026-06-09-real-pipeline-integration.md  2026-06-10-simulation-accuracy-design.md
mev-backtest-api/: Cargo.toml
mev-backtest-api/src/: main.rs  mapping.rs  pipeline.rs  state.rs
mev-backtest-api/src/routes/: chains.rs  mod.rs  simulate.rs
mev-backtest-cli/: Cargo.toml
mev-backtest-cli/src/: main.rs
mev-backtest-core/: Cargo.toml
mev-backtest-core/src/: aggregate.rs  cache.rs  cli.rs  coingecko.rs  config.rs  data.rs  fetch.rs  lib.rs  replay.rs  resolver.rs  rpc.rs  run.rs  types.rs  utils.rs  validation.rs
mev-backtest-core/src/mev/: flash_loan.rs  historical_prices.rs  jit.rs  jit_arb.rs  mod.rs  multi_hop.rs  opportunity.rs  pricing.rs  sandwich.rs  two_hop.rs
mev-backtest-core/src/pool/: decoders.rs  discovery.rs  factory_verify.rs  graph_client.rs  math.rs  mod.rs  registry.rs  state.rs  v3_quote.rs
mev-backtest-core/tests/: e2e_discovery.rs  integration.rs
plans/: cross-verification-plan.md  mevscope-api-plan.md  performance-optimization-plan.md
pools/: arbitrum.json  avalanche.json  base.json  bsc.json  ethereum.json  optimism.json  polygon.json
results/: run_1780806150.json  run_1780824608.json  run_1780824825.json
ui/: .env  .env.example  API.md  package.json
ui/src/: routeTree.gen.ts  styles.css
ui/src/lib/: chains.ts  formatters.ts  mockData.ts  strategyDefs.ts
ui/src/routes/: __root.tsx  configure.tsx  history.tsx  index.tsx  opportunities.tsx  pipeline.tsx  report.tsx
ui/src/store/: simulationStore.ts
(+37 files in other folders)
