[package]
name = "mev-backtest-api"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-backtest-core = { path = "../mev-backtest-core" }
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
alloy = "2"
hex = "0.4"
tokio-stream = "0.1"
futures = "0.3"
