[package]
name = "mev-backtest-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mev-backtest"
path = "src/main.rs"

[dependencies]
mev-backtest-core = { path = "../mev-backtest-core" }
tokio.workspace = true
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
comfy-table.workspace = true
chrono.workspace = true
clap.workspace = true
url.workspace = true