[package]
name = "mev-backtest-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
mev-backtest-core = { path = "../mev-backtest-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tracing = "0.1"
indicatif = "0.17"
